# aro-plugin-sdk-python

./: README.md  pyproject.toml
aro_plugin_sdk/: __init__.py  decorators.py  errors.py  event.py  input.py  output.py  params.py  runner.py  testing.py
tests/: test_decorators.py  test_input.py
