[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aro-plugin-sdk"
version = "0.1.0"
description = "Python SDK for building ARO plugins"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["aro", "plugin", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/arolang/aro"
Repository = "https://github.com/arolang/aro-plugin-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["aro_plugin_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
